Add some more package metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,7 @@
 [metadata]
 name = tracklist
+description = Library and CLI tool for processing tracklists
+url = https://github.com/fwcd/python-tracklist
 version = 0.0.1
 
 [options]
