--- a/setup.cfg
+++ b/setup.cfg
@@ -9,5 +9,5 @@ packages = find:
 install_requires =
 
 [options.entry_points]
-console_sctracklistts =
+console_scripts =
   tracklist = tracklist:main
